--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_riverpod: ^2.6.1
   mime: ^2.0.0
   sqflite_common_ffi: ^2.3.5
+  file_picker: ^10.1.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
